# unicode_skeleton

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
data/: confusables_to_data.rs
src/: data.rs  lib.rs
